--- a/index.html
+++ b/index.html
@@ -27,16 +27,17 @@
               <button type="submit" class="btn btn-info">Find Doctors</button>
             </div>
           </form>
-          <div class="col-md-6">
-            <span id="picture"></span>
-            <h3>Doctor name: <span id="name"></span></h3>
-            <h4>City: <span id="city"></span></h4>
-            <h4>State: <span id="state"></span></h4>
-            <h4>Street: <span id="street"></span></h4>
-            <h4>Zip: <span id="zip"></span></h4>
-            <h4>Phone: <span id="phone"></span></h4>
-            <h4>Bio: <span id="bio"></span></h4>
-          </div>
+        </div>
+        <div class="col-md-6">
+          <span id="picture"></span>
+          <span id="name"></span>
+          <span id="city"></span>
+          <span id="state"></span>
+          <span id="street"></span>
+          <span id="zip"></span>
+          <span id="phone"></span>
+          <span id="bio"></span>
+          <span class="showErrors"></span>
         </div>
       </div>
     </div>
