--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <div class="card">
             <h1>Doctor Lookup Portland</h1>
           </div>
-          <form class="form-control">
+          <form id="doctor-form">
             <div class="form-group">
               <label for="issue">Medical Issue: </label>
               <input id="issue" name="issue" class="form-control" type="text">
@@ -31,6 +31,7 @@
         <div class="col-md-6">
           <span id="picture"></span>
           <span id="name"></span>
+          <span id="newPatients"></span>
           <span id="city"></span>
           <span id="state"></span>
           <span id="street"></span>
@@ -38,6 +39,7 @@
           <span id="phone"></span>
           <span id="bio"></span>
           <span class="showErrors"></span>
+          <span id="test"></span>
         </div>
       </div>
     </div>
