refactor search format

--- a/index.html
+++ b/index.html
@@ -28,18 +28,23 @@
             </div>
           </form>
         </div>
-        <div class="col-md-6">
-          <span id="picture"></span>
-          <span id="name"></span>
-          <span id="newPatients"></span>
-          <span id="city"></span>
-          <span id="state"></span>
-          <span id="street"></span>
-          <span id="zip"></span>
-          <span id="phone"></span>
-          <span id="bio"></span>
+        <div class="col-md-6 output">
+          <!-- <span id="picture"></span>
+          <script>
+            $( ".picture" ).wrapInner( "<img src=></b>" );
+          </script> -->
+
+          <!-- <span class="name"></span>
+          <span class="newPatients"></span>
+          <span class="city"></span>
+          <span class="state"></span>
+          <span class="street"></span>
+          <span class="zip"></span>
+          <span class="phone"></span>
+          <span class="bio"></span>
           <span class="showErrors"></span>
-          <span id="test"></span>
+          <span class="test"></span> -->
+
         </div>
       </div>
     </div>
