format incoming data with prepending

--- a/index.html
+++ b/index.html
@@ -28,23 +28,12 @@
             </div>
           </form>
         </div>
-        <div class="col-md-6 output">
-          <!-- <span id="picture"></span>
-          <script>
-            $( ".picture" ).wrapInner( "<img src=></b>" );
-          </script> -->
+        <div class="col-md-6">
+          <div class="card bg-light">
+            <div class="card-body output">
 
-          <!-- <span class="name"></span>
-          <span class="newPatients"></span>
-          <span class="city"></span>
-          <span class="state"></span>
-          <span class="street"></span>
-          <span class="zip"></span>
-          <span class="phone"></span>
-          <span class="bio"></span>
-          <span class="showErrors"></span>
-          <span class="test"></span> -->
-
+            </div>
+          </div>
         </div>
       </div>
     </div>
